--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
     </div>
     <div class="service2" style="background-color: #ffd1d1;"> <!-- Light coral service background color -->
         <h2>Gelish</h2>
-        <p>Mains:</p>
-        <p>Pieds:</p>
+        <p>Mains:2$</p>
+        <p>Pieds:3$</p>
     </div>
     
 </section>
