--- a/index.html
+++ b/index.html
@@ -48,11 +48,20 @@
         border: 1px solid #ddd; /* Gray border */
         border-radius: 5px; /* Rounded corners */
     }
-    footer {
-        background-color: #ffcccc; /* Light coral footer background color */
-        padding: 10px;
-        text-align: end;
-    }
+    body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+        }
+        .footer {
+            background-color: #ffcccc; /* Pink background color */
+            color: #fff; /* White text color */
+            padding: 20px;
+            text-align: center;
+        }
+        .footer p {
+            margin: 0;
+        }
 </style>
 </head>
 <body>
@@ -105,9 +114,10 @@
     
 </section>
 
-<footer>
-    <p>&copy; For more info:70803566</p>
-</footer>
-
+<div class="footer">
+    <p>&copy; 2024 Nail Care Studio</p>
+    <p>Contact us: info@nailcarestudio.com</p>
+    <p>whatsapp:70803566</p>
+</div>
 </body>
 </html>
