--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <body>
     <img src="89321578-c196-4ffa-a41b-bc6828055ffa.jpg" alt="Fixed Image" class="fixed-image">
 <header>
-    <h1>Nail Care Salon</h1>
+    <h1>Get Nailed</h1>
 </header>
 
 <section>
@@ -108,15 +108,15 @@
     </div>
     <div class="service2" style="background-color: #ffd1d1;"> <!-- Light coral service background color -->
         <h2>Gelish</h2>
-        <p>Mains:2$</p>
-        <p>Pieds:3$</p>
+        <p>Mains:10$</p>
+        <p>Pieds:10$</p>
     </div>
     
 </section>
 
 <div class="footer">
-    <p>&copy; 2024 Nail Care Studio</p>
-    <p>Contact us: info@nailcarestudio.com</p>
+    <p>&copy;Get Nailed</p>
+    <p>Contact us:rachamazbouh0@gmail.com</p>
     <p>whatsapp:70803566</p>
 </div>
 </body>
