--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <p>Pose Mains:2$</p>
         <p>Manicure sans pose:5$</p>
         <p>Mani+pose:6$</p>
-       <p> MAni,Scrub+Massage:8$</p>
+       <p> Mani,Scrub+Massage:8$</p>
        <p>French:4$</p>
        <p>Fake Nails:6$</p>
     </div>
