--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             margin: 0;
         }
         .whatsapp-button {
-            background-color: #25D366; /* WhatsApp green */
+            background-color:grey; /* WhatsApp green */
             border: none;
             color: #fff;
             padding: 10px 20px;
