--- a/index.html
+++ b/index.html
@@ -71,9 +71,13 @@
     align-items: center; /* Align items vertically */
     justify-content: center;/*Center items horizontally */
 }
+.footer-content p {
+    margin-right: 100%; /* Add spacing between text and image */
+}
 
 .footer-content img {
     width: 100px; /* Adjust the width of the QR code */
+    margin-right: 3%;
 }
         .footer p {
             margin: 0;
