modify the image

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     <p>&copy;Bee</p>
     <p>Contact us: rachamazbouh0@gmail.com</p>
     <div class="footer-content">
-        <img src="C:\Users\KEVIN\Desktop\rachaa\Bee.jpg" alt="QR code">
+        <img src="insta.png" alt="QR code">
     <button class="whatsapp-button" onclick="goToChat()">Book Now</button>
     <script>
         function goToChat() {
