modify the order

--- a/index.html
+++ b/index.html
@@ -144,14 +144,10 @@
     </div>
 
     <div class="service" style="background-color: white;"> <!-- Light coral service background color -->
-        <h2>Wax</h2>
-        <p>Full Arms:5$</p>
-        <p>Half Arms:3$</p>
-        <p>Full Legs:6$</p>
-        <p>Half Legs:4$</p>
-        <p>Belly:6$</p>
-        <p>back:6$</p>
-        <p>Underarms:3$</p>
+        <h2>Gelish</h2>
+        <p>Mains:10$</p>
+        <p>Pieds:10$</p>
+        <p>removal:4$</p>
 
     </div>
     <div class="service1" style="background-color: white;"> <!-- Light coral service background color -->
@@ -160,9 +156,15 @@
         <p>Moustache:1$</p>
     </div>
     <div class="service2" style="background-color: white;"> <!-- Light coral service background color -->
-        <h2>Gelish</h2>
-        <p>Mains:10$</p>
-        <p>Pieds:10$</p>
+
+        <h2>Wax</h2>
+        <p>Full Arms:5$</p>
+        <p>Half Arms:3$</p>
+        <p>Full Legs:6$</p>
+        <p>Half Legs:4$</p>
+        <p>Belly:6$</p>
+        <p>back:6$</p>
+        <p>Underarms:3$</p>
     </div>
     
 </section>
@@ -176,7 +178,7 @@
     <script>
         function goToChat() {
             // Open WhatsApp chat link
-            window.open("https://wa.me/70803566", "_blank");
+            window.open("https://wa.me/81250418", "_blank");
             
             // Display a confirmation message or paragraph
         }
