modify the letters

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <h2>Gelish</h2>
         <p>Mains:10$</p>
         <p>Pieds:10$</p>
-        <p>removal:4$</p>
+        <p>Removal:4$</p>
 
     </div>
     <div class="service1" style="background-color: white;"> <!-- Light coral service background color -->
@@ -163,7 +163,7 @@
         <p>Full Legs:6$</p>
         <p>Half Legs:4$</p>
         <p>Belly:6$</p>
-        <p>back:6$</p>
+        <p>Back:6$</p>
         <p>Underarms:3$</p>
     </div>
     
