modify the pricesss

--- a/index.html
+++ b/index.html
@@ -126,27 +126,28 @@
 <section>
     <div class="service" style="background-color: white;"> <!-- Light pink service background color -->
         <h2>Nail Care</h2>
-        <p>Pose Mains:2$</p>
-        <p>Manicure sans pose:5$</p>
+        <p>Pose Mains:3$</p>
+        <p>Manicure sans pose:10$</p>
         <p>Mani+pose:6$</p>
        <p> Mani,Scrub+Massage:8$</p>
        <p>French:4$</p>
-       <p>Fake Nails:6$</p>
+       <p>Fake Nails:8$</p>
     </div>
 
     <div class="service" style="background-color:white;"> <!-- Light salmon service background color -->
         <h2>Pedicure</h2>
-        <p>Pose Pieds:3$</p>
-        <p>Pedicure sans pose:6$</p>
+        <p>Pose Pieds:4$</p>
+        <p>Pedicure sans pose:8$</p>
         <p>Pedi+Pose:7$</p>
-        <p>Pedi,Scrub+massage:9$</p>
+        <p>Pedi,Scrub+massage:12$</p>
         <p>French:4$</p>
     </div>
 
     <div class="service" style="background-color: white;"> <!-- Light coral service background color -->
         <h2>Gelish</h2>
-        <p>Mains:10$</p>
-        <p>Pieds:10$</p>
+        <p>Gel color+Mani=12$</p>
+        <p>Gel color+Pedi=12$</p>
+        <p>Gel color french=14$</p>
         <p>Removal:4$</p>
 
     </div>
@@ -158,10 +159,10 @@
     <div class="service2" style="background-color: white;"> <!-- Light coral service background color -->
 
         <h2>Wax</h2>
-        <p>Full Arms:5$</p>
-        <p>Half Arms:3$</p>
-        <p>Full Legs:6$</p>
-        <p>Half Legs:4$</p>
+        <p>Full Arms:6$</p>
+        <p>Half Arms:4$</p>
+        <p>Full Legs:12$</p>
+        <p>Half Legs:6$</p>
         <p>Belly:6$</p>
         <p>Back:6$</p>
         <p>Underarms:3$</p>
