modify the logo

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 <body>
 
 <header>
-    <img src="new log.png" alt="Logo" width="300px" >
+    <img src="new logo.png" alt="Logo" width="300px" >
 </header>
 
 <section>
