--- a/index.html
+++ b/index.html
@@ -138,17 +138,17 @@
                 <p>Russian manicure: 10$</p>
                 <p>Russian pedicure: 15$</p>
                 <br>
-                <p>Classic manicure: 7$</p>
-                <p>Classic mani + nail polish: 10$</p>
+                <p>Classic manicure: 8$</p>
+                <p>Classic mani + nail polish: 12$</p>
                 <br>
-                <p>Classic pedicure: 8$</p>
-                <p>Classic pedi + nail polish: 12$</p>
+                <p>Classic pedicure: 10$</p>
+                <p>Classic pedi + nail polish: 15$</p>
                 <BR>
-                <p>French: +3$</p>
-                <p>Broken nail: +1$</p>
-                <p>Scrub + Massage: +4$</p>
+                <p>French: +5$</p>
+                <p>Broken nail/gel tips: +3$</p>
+                <p>Scrub + Massage: +5$</p>
                 <br>
-                <p>Parrafine: 8$</p>
+                <p>Parrafine: 10$</p>
             </div>
 
             <!-- Column 2 -->
