--- a/index.html
+++ b/index.html
@@ -153,25 +153,28 @@
 
             <!-- Column 2 -->
             <div class="column">
-                <p>Russian manicure + gel color: 17$</p>
-                <p>Russian pedicure + gel color: 20$</p>
+                <p>Russian manicure + gel color: 20$</p>
+                <p>Russian pedicure + gel color: 25$</p>
                 <br>
-                <p>Rubber base: +7$</p>
+                <p>Rubber base: +10$</p>
                 <p>Gel color removal: 5$</p>
                 <br>
                 <p>Gel french: +5$</p>
                 <p>Cat eye: +4$</p>
+                <p>Ombre: +5$</p>
+                <p>Design: +1$/nail</p>
                 <br>
-                <p>Full set builder gel + gel color: 50$</p>
-                <p>Refill builder gel + gel color: 25$</p>
+                <p>Full set builder gel + gel color: 60$</p>
+                <p>Refill builder gel + gel color: 30$</p>
+                <p>Removal full set: 10$</p>
             </div>
         </div>
     </div>
 
     <div class="service1">
         <h2>Face</h2>
-        <p>Eyebrows: 3$</p>
-        <p>Moustache: 1$</p>
+        <p>Eyebrows: 4$</p>
+        <p>Moustache: 2$</p>
     </div>
 
     <div class="service2">
